k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headband
  labels:
    name: headband
    environment: production
